Fix list jumpiness, add info icon and example star, activate wide incoming idea panel, show lists on drag, make dragged idea translucent

--- a/public/stylesheets/sass/ce_live.sass
+++ b/public/stylesheets/sass/ce_live.sass
@@ -16,4 +16,18 @@ div.join_com
 div#sign_in_form td.lbl
 	text-align: left
 	
+@mixin opacity($value)
+	opacity: #{"." + $value}
+	filter: alpha(opacity=$value)
+	-ms-filter: "alpha(opacity=$value)"
+	-khtml-opacity: #{"." + $value}
+	-webkit-opacity: #{"." + $value}
+	-moz-opacity: #{"." + $value}
+
+.dragged_idea
+	@include opacity(40)
+	p.stats
+		display: none
+
+
 	
